--- a/source/_posts/分布式协议与算法实战.md
+++ b/source/_posts/分布式协议与算法实战.md
@@ -12,4 +12,19 @@ cover: https://howiechen95.com/group1/M00/00/00/CgAMB2DwVDmAHjUmAA1nuIrd6XU606.j
 
 ![](https://howiechen95.com/group1/M00/00/00/CgAMB2DwVDmAHjUmAA1nuIrd6XU606.jpg)
 
+> # 理论篇
+ 
+## 拜占庭将军问题
+
+## CAP 理论
+
+## ACID 理论
+
+## BASE 理论
+
+> # 协议和算法篇
+
+> # 实战篇
+
+
 
